--- a/notebooks/scalp_2dplot.ipynb
+++ b/notebooks/scalp_2dplot.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dfac27a5-40db-4f13-a4af-67f31baf90b0",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -116,13 +110,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4a1a1d22-3273-438c-bcc9-85e7d1a55af6",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import scalp\n",
@@ -144,23 +132,14 @@
     "    dataset, grap = scalp.mkgraph(dataset,intra_neigh = 7, \n",
     "                                  inter_neigh=1,add_tree=False)\n",
     "    scalp.graph_embed_plot(dataset, grap)\n",
-    "    draw.batchplot(dataset, from_obsm = 'embedding')\n",
-    "\n",
-    "\n",
-    "    "
+    "    draw.batchplot(dataset, from_obsm = 'embedding')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "17a79e3b-807f-455f-a4b5-4443ba98abe6",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -176,13 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "034e9050-e511-491b-b92c-85d82a051c59",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for x in [1,2,3]:\n",
@@ -196,13 +169,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7a71989b-70e6-4647-9096-36163aeaa783",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset, grap = scalp.mkgraph(dataset,intra_neigh = 30, scaling_threshold = 1.001, \n",
@@ -482,30 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8170b414-36d4-4319-88b0-c07712d60a34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def remove_values_with_probability(matrix, p):\n",
-    "    # Create a mask with True values based on the probability p\n",
-    "    mask = np.random.rand(*matrix.shape) > p\n",
-    "    # Apply the mask to the matrix to remove values\n",
-    "    matrix_removed = np.where(mask, matrix, 0)\n",
-    "    return matrix_removed\n",
-    "\n",
-    "# Example usage:\n",
-    "# Assuming you have a matrix 'my_matrix' and want to remove values with a probability of 0.2 (20%)\n",
-    "my_matrix = sparse.lil_matrix([[1, 0, 0], [4, 5, 6], [7, 8, 9]])\n",
-    "probability = 0.2\n",
-    "\n",
-    "result_matrix = remove_values_with_probability(my_matrix, probability)\n",
-    "print(result_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d0c2e4cb-bf55-4354-ae4d-8348a193f12a",
    "metadata": {},
    "outputs": [],
@@ -527,8 +470,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
