--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -150,9 +150,11 @@
    "source": [
     "import scanpy as sc\n",
     "def Scalp(dataset, dim = 2):\n",
-    "    parm = {'intra_neigh': 8, 'intra_neighbors_mutual': False,\n",
-    "            'inter_neigh': 2, 'add_tree': True,\n",
-    "                  'copy_lsa_neighbors': False, 'inter_outlier_threshold': 0.95, 'inter_outlier_probabilistic_removal': False}\n",
+    "    parm = {'neighbors_total': 30, 'intra_neighbors_mutual': False,\n",
+    "            'neighbors_intra_fraction': .3, 'add_tree': True,\n",
+    "                  'copy_lsa_neighbors': False, \n",
+    "            'inter_outlier_threshold': 0.95, \n",
+    "            'inter_outlier_probabilistic_removal': False}\n",
     "    dataset, grap = scalp.mkgraph(dataset,**parm)\n",
     "    scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim)\n",
     "    return scalp.transform.stack(dataset)\n",
@@ -364,14 +366,6 @@
    "source": [
     "np.corrcoef(ours.batch.values, theirs.batch_scib_avg.values)[0,1], np.corrcoef(ours.label.values, theirs.bioconservation_scib_avg.values)[0,1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64bc876a-cea0-46a4-96cf-db729f555885",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -389,8 +383,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
