--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2cfd482a-338b-487d-8af6-65a5275c4a70",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -52,13 +46,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f40721e7-8dc2-404b-b659-4cb1d771c705",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = ut.loadfile(\"/home/ubuntu/repos/cellsaw/application/res_scib1\")\n",
@@ -138,8 +126,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
