fix rm scaling_thresh, changed neg sampling for jax

--- a/notebooks/scalp_2dplot.ipynb
+++ b/notebooks/scalp_2dplot.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=5,  maxcells = 1000,  datasets = [\"Immune_ALL_hum_mou\"])\n",
-    "datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=3,  maxcells = 100 )\n",
+    "datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=3,  maxcells = 400 )\n",
     "\n",
     "dataset = datasets[0]\n",
     "\n",
@@ -158,11 +158,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in [1,2,3]:\n",
-    "    dataset, grap = scalp.mkgraph(dataset,intra_neigh = 7, \n",
-    "                                  inter_neigh=x,add_tree=False)\n",
+    "for x in [3,4,5]:\n",
+    "    dataset, grap = scalp.mkgraph(dataset,neighbors_total = 30,  neighbors_intra_fraction=x/10,add_tree=False)\n",
     "    dataset = scalp.umapwrap.graph_umap(dataset,grap,label = 'embedding')\n",
-    "    draw.batchplot(dataset, from_obsm = 'embedding')"
+    "    scalp.umapwrap.graph_jax(dataset,grap,label = 'umap', n_components = 2, neighbors_total = 30)\n",
+    "    # draw.batchplot(dataset, from_obsm = 'embedding')\n",
+    "    draw.batchplot(dataset, from_obsm = 'umap')"
    ]
   },
   {
@@ -172,10 +173,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset, grap = scalp.mkgraph(dataset,intra_neigh = 30, scaling_threshold = 1.001, \n",
-    "                              inter_neigh=3,add_tree=True)\n",
-    "dataset = scalp.umapwrap.graph_umap(dataset,grap,label = 'embedding')\n",
-    "draw.batchplot(dataset, from_obsm = 'embedding')"
+    "dataset, graph = scalp.mkgraph(dataset,neighbors_total = 30, \n",
+    "                              intra_neighbors_mutual=False,\n",
+    "                              neighbors_intra_fraction=.3,add_tree=False)\n",
+    "# dataset = scalp.umapwrap.graph_umap(dataset,graph,label = 'embedding')\n",
+    "scalp.umapwrap.graph_umap(dataset,graph,label = 'umap', n_components = 2)\n",
+    "#scalp.umapwrap.graph_jax(dataset,grap,label = 'umap', n_components = 2, neighbors_total = 20)\n",
+    "draw.batchplot(dataset, from_obsm = 'umap')"
    ]
   },
   {
