--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -210,47 +210,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scib.metrics import metrics\n",
-    "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
-    "def score(dataset):\n",
-    "    # ds2 = dataset.copy()\n",
-    "    # ds2.X = ds2.obsm['umap']\n",
-    "    # https://scib.readthedocs.io/en/latest/api.html#biological-conservation-metrics\n",
-    "    embed = 'umap' if 'umap' in dataset.obsm else 'X_umap'\n",
-    "    sc =  metrics(dataset, dataset, 'batch', 'label', embed = embed,\n",
-    "                       isolated_labels_asw_=True, silhouette_=True, hvg_score_=True, graph_conn_=True,\n",
-    "           pcr_=True,\n",
-    "             isolated_labels_f1_=True,\n",
-    "             trajectory_=False,\n",
-    "             nmi_=True,\n",
-    "            ari_=True )\n",
-    "    return dict(sc)[0]\n",
-    "    \n",
-    "def score_lin(dataset):\n",
-    "    y = dataset.obs['label']\n",
-    "    X = dataset.obsm['umap'] if 'umap' in dataset.obsm else dataset.obsm['X_umap']\n",
-    "    prediction = SGDClassifier().fit(X,y).predict(X)\n",
-    "    return accuracy_score(y , prediction )\n",
-    "    \n",
-    "def score_lin_batch(dataset):\n",
-    "    # do this per cell line\n",
-    "    def acc(label): \n",
-    "        instances = dataset.obs['label'] == label \n",
-    "        tmp_dataset = dataset[instances]\n",
-    "        y = tmp_dataset.obs['batch']\n",
-    "        if len(np.unique(y)) < 2:\n",
-    "            return np.nan\n",
-    "        X = tmp_dataset.obsm['umap'] if 'umap' in tmp_dataset.obsm else tmp_dataset.obsm['X_umap']\n",
-    "        prediction = SGDClassifier().fit(X,y).predict(X)\n",
-    "        return balanced_accuracy_score(y , prediction, adjusted=True )\n",
-    "    \n",
-    "    # scores = np.array([1-acc(l) for l in np.unique(dataset.obs['label'])]) ### !!!! \n",
-    "    # weight by label counts .. \n",
-    "    return np.nanmean([1-acc(l) for l in np.unique(dataset.obs['label'])])\n",
-    "    \n",
+    "from scalp.score import score_lin, score_lin_batch, score_scib_metrics\n",
     "scoredics_lb = ut.xxmap(score_lin_batch, mydata)\n",
-    "scoredics_scib = ut.xxmap(score, mydata)\n",
+    "scoredics_scib = ut.xxmap(score_scib_metrics, mydata)\n",
     "scoredics_l = ut.xxmap(score_lin, mydata)\n",
     "\n",
     "# score_lin_batch and score_lin -> pareto comparison"
@@ -285,14 +247,7 @@
    "source": [
     "import lmz\n",
     "# this is for SCIB scoring \n",
-    "def doit(e):\n",
-    "    d = dict(e)\n",
-    "    for k in list(d.keys()):\n",
-    "        if np.isnan(d[k]):\n",
-    "            d.pop(k)\n",
-    "    d.pop('hvg_overlap',0)\n",
-    "    return d\n",
-    "scoredicts = lmz.Map(doit, scoredics_scib)\n",
+    "\n",
     "\n",
     "funcs = 'scanorama, umaponly, bbknn, combat, Scalp'.split(', ')\n",
     "results = [ [{\"method\":funcs[f], 'score':ss, 'dataset':d, 'metric':scrmeth } \n",
@@ -332,6 +287,16 @@
     "sns.barplot(data=df, y = 'score', x = 'method', errorbar = 'sd', hue='target')\n",
     "plt.show()\n",
     "theirs = df.pivot_table(index='method', columns='target', values='score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a8ead5-298a-4514-99f5-969b624d1d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
