--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "%load_ext autoreload\n",
     "%matplotlib inline\n",
     "%autoreload 2\n",
@@ -32,7 +31,7 @@
    "outputs": [],
    "source": [
     "datasets = scalp.data.loaddata_scib(scalp.test_config.scib_datapath,  maxdatasets=10,  maxcells = 1000 )\n",
-    "dataset = datasets[1]"
+    "dataset = datasets[2]"
    ]
   },
   {
@@ -151,16 +150,24 @@
     "import scanpy as sc\n",
     "from scalp import graph as sgraph\n",
     "from scipy.sparse import csr_matrix\n",
+    "\n",
     "def Scalp(dataset, dim = 2):\n",
     "    parm = {'neighbors_total': 50, 'intra_neighbors_mutual': False,\n",
     "            'neighbors_intra_fraction': .3, 'add_tree': False,\n",
     "                  'copy_lsa_neighbors': False, \n",
     "            'inter_outlier_threshold': 0.9, \n",
     "            'inter_outlier_probabilistic_removal': False}\n",
+    "    bestparm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False, \n",
+    "            'inter_outlier_threshold': 0.7433835019772639, 'intra_neighbors_mutual': True, \n",
+    "                'neighbors_intra_fraction': 0.5689801219518802, 'neighbors_total': 31.0}\n",
+    "    \n",
+    "    parm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False, \n",
+    "            'inter_outlier_threshold': 0.72, 'intra_neighbors_mutual': False, 'neighbors_intra_fraction': 0,\n",
+    "            'neighbors_total': 1}\n",
     "    dataset, grap = scalp.mkgraph(dataset,**parm)\n",
-    "    neggraph = sgraph.negstuff(dataset,**parm)\n",
+    "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
-    "    #\n",
+    "    \n",
     "    # scalp.umapwrap.graph_pacmap(dataset,csr_matrix(grap).toarray(,label = 'umap', n_components = dim)\n",
     "    scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim)\n",
     "    return scalp.transform.stack(dataset)\n",
