--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -28,19 +28,152 @@
    "source": [
     "import seaborn as sns \n",
     "from ubergauss.optimization import df_remove_duplicates as clean\n",
-    "from ubergauss.optimization import get_best\n",
+    "from ubergauss.optimization import get_best, pareto_scores\n",
     "import numpy as np\n",
-    "import ubergauss.tools as ut"
+    "import ubergauss.tools as ut\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e1be8a27-02cf-4a7d-bfdd-fa43fc4abca2",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00f4fa7b-eb57-43ec-80f1-fcf88e7bb4ce",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "- one interesting thing to look at is dimensionality \n",
-    "  of the projection... do a plot dim vs output.score.score()"
+    "df = ut.loadfile(\"/home/ubuntu/repos/cellsaw/application/res_scib1\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77bd7126-946a-4122-8526-5e4195819906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = ['add_tree', 'copy_lsa_neighbors', 'inter_outlier_probabilistic_removal',\n",
+    "       'inter_outlier_threshold', 'intra_neighbors_mutual',\n",
+    "       'neighbors_intra_fraction', 'neighbors_total', 'dataset']\n",
+    "df.fillna(0, inplace=True)\n",
+    "df = df.melt(id_vars = id  ,  value_vars=['batch','label'], var_name='target', value_name='score')\n",
+    "id.remove('dataset')\n",
+    "pscores = pareto_scores(df, method = id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fef732cb-562d-4d73-8074-315a72e61010",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78f8fbbc-81b2-40c6-abb2-b09390cf2036",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "newdf = [dict(zip(id,v)) for v,score in pscores]\n",
+    "for d,s in zip(newdf, pscores):\n",
+    "    d['score'] = s[1]\n",
+    "newdf = pd.DataFrame(newdf)\n",
+    "g=sns.pairplot(newdf, hue = 'score', height=1.5,  palette = 'magma')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5008bf44-1036-494e-be3e-1a2d060dcccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "newdf = [dict(zip(id,v)) for v,score in pscores]\n",
+    "for d,s in zip(newdf, pscores):\n",
+    "    d['score'] = -s[1]\n",
+    "newdf = pd.DataFrame(newdf)\n",
+    "get_best(newdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "979bc218-924c-4a80-b775-013928e47009",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ubergauss import optimization as uo\n",
+    "newdf.sort_values(by=['score'])[-20:].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c90fc2-48d2-439f-819a-969ab51f87e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf.sort_values(by=['score'])[-20:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1776116a-2863-4cb6-9411-a93389bec59c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3062184c-e9dc-49b6-8502-f0788dbe91b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d0b875-17f7-4c41-8c81-7ce639868040",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4e67f91-8e0f-471a-8781-1e4e9e95bc7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36476b2a-81fd-49d4-85f2-5567a3bfe256",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b90c7e41-8027-48c2-a052-fd3626858f30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e36431a-c4b8-45ac-a0d5-e5c08681bc8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
