rotate blocks, pacmap2, small param changes

--- a/notebooks/scalp_blobs.ipynb
+++ b/notebooks/scalp_blobs.ipynb
@@ -33,13 +33,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset = scalp.data.mkblobs(sizes = [[24,21],[25,20],[23,22]], clusterspread = .3, batchspread = 4)\n",
-    "dataset = scalp.data.mkblobs(sizes = [[40,24,21],[40,25,20],[40,23,22]],  clusterspread = .5, batchspread = 1.5)\n",
+    "dataset = scalp.data.mkblobs(sizes = [[24,21],[25,20],[23,22]], clusterspread = .3, batchspread = 4)\n",
+    "#dataset = scalp.data.mkblobs(sizes = [[40,24,21],[20,45,20],[20,23,42]],  clusterspread = 2.5, batchspread = 1)\n",
+    "#dataset = scalp.data.mkblobs(sizes = [[200,200,200], [200,200,200] ,[200,200,200]],  clusterspread = 0.3, batchspread = 1)\n",
     "#dataset = scalp.data.mkblobs(sizes = [[3,5],[5,3]], clusterspread = .1, batchspread = 4)\n",
-    "for d in dataset:\n",
-    "    d.obsm['umap'] = d.X\n",
+    "#dataset[1] = scalp.data.rotate(dataset[1], degree = 30)\n",
     "stack = scalp.transform.stack(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'], s= 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc70349e-fd6c-41fc-9009-c961969c57fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parm = {'neighbors_total': 10,\n",
+    "         'neighbors_intra_fraction': .2,\n",
+    "         'add_tree': False,\n",
+    "         'epsilon'  : 1e-1, \n",
+    "          'copy_lsa_neighbors': False, \n",
+    "         'inter_outlier_threshold': .9,\n",
+    "         'inter_outlier_probabilistic_removal': False}\n",
+    "\n",
+    "dataset, graph = scalp.mkgraph(dataset,**parm)\n",
+    "scalp.umapwrap.graph_umap(dataset,graph,label = 'umap', n_components = 2)\n",
+    "stack = scalp.transform.stack(dataset)\n",
+    "sc.pl.umap(stack, color=['batch', 'label'], s= 100)\n",
+    "\n",
+    "plt.matshow(graph.todense())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f70482c-966d-4e89-b933-4c0f437117a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scalp.output import score\n",
+    "score.score_lin(stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "929440b8-d0a7-4208-9cba-93fa43ce72f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "parm = {'neighbors_total': 30,\n",
+    "         'neighbors_intra_fraction': .3,\n",
+    "         'add_tree': False,\n",
+    "         'epsilon'  : 1e-4, \n",
+    "          'copy_lsa_neighbors': False, \n",
+    "         'inter_outlier_threshold': .5,\n",
+    "         'inter_outlier_probabilistic_removal': False}\n",
+    "\n",
+    "for cs in [.2,10]:\n",
+    "    for bs in [.1,10]:\n",
+    "        print(f'{cs=} {bs=}')\n",
+    "        dataset = scalp.data.mkblobs(sizes = [[40,24,21],[20,45,20],[20,23,42]],  clusterspread = cs, batchspread = bs)\n",
+    "        stack = scalp.transform.stack(dataset)\n",
+    "        sc.pl.umap(stack, color=['batch', 'label'], s= 80)\n",
+    "        \n",
+    "        dataset, graph = scalp.mkgraph(dataset,**parm)\n",
+    "        scalp.umapwrap.graph_umap(dataset,graph,label = 'umap', n_components = 2)\n",
+    "        stack = scalp.transform.stack(dataset)\n",
+    "        sc.pl.umap(stack, color=['batch', 'label'], s= 100)\n",
+    "        \n",
+    "\n"
    ]
   },
   {
@@ -61,26 +126,10 @@
     "         'inter_outlier_probabilistic_removal': False}\n",
     "\n",
     "dataset, graph = scalp.mkgraph(dataset,**parm)\n",
-    "# neggraph = sgraph.negstuff(dataset,**parm)\n",
-    "# graph[graph >= 100] = 2\n",
-    "# graph = csr_matrix(graph).toarray()\n",
-    "\n",
-    "#graph[graph==0] = 99\n",
     "scalp.umapwrap.graph_umap(dataset,graph,label = 'umap', n_components = 2)\n",
-    "# fullgraph = dijkstra(graph)\n",
-    "# scalp.umapwrap.graph_pacmap(dataset,fullgraph,label = 'umap', n_components = 2, neighbors = None, MN  = .2, FP = 2)\n",
-    "# scalp.umapwrap.graph_jax(dataset,graph,label = 'umap', n_components = 2, **parm)\n",
-    "# scalp.umapwrap.graph_umap(dataset,graph,label = 'umap', n_components = 2)\n",
-    "\n",
     "stack = scalp.transform.stack(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'], s= 100)\n",
-    "\n",
-    "#sns.heatmap(neggraph.toarray())\n",
-    "#plt.show()\n",
-    "\n",
-    "# from sklearn.metrics.pairwise import euclidean_distances\n",
-    "# sns.heatmap(euclidean_distances(stack.obsm['umap']))\n",
-    "# plt.show()"
+    "\n"
    ]
   },
   {
@@ -94,18 +143,6 @@
     "st = (csr_matrix(graph),csr_matrix(neggraph))\n",
     "st[0][mask] = 0\n",
     "scalp.umapwrap.graph_jax(dataset,st,label = 'umap', n_components = 2)[0].obsm['umap']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08b082c0-3625-4b69-a357-f658517975bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linalg.norm([[ 0.      ,    0.        ],\n",
-    " [-0.00783532 ,-0.0041316 ],\n",
-    " [-0.07946298 , 0.00789009]], axis = 1)"
    ]
   },
   {
@@ -149,31 +186,6 @@
     "    plt.show\n",
     "    \n",
     "plot_sparse_matrix(csr_matrix(graph), plot_title=\"Graph\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bc7ec4e-48fe-4408-ba6b-645777d9a142",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "arr = np.arange(9).reshape((3, 3))\n",
-    "\n",
-    "np.random.shuffle(arr.T)\n",
-    "\n",
-    "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66234222-549e-4bbf-b6d7-38af96ca7a78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum((graph.toarray()>0 )& (neggraph.toarray() > 0))"
    ]
   }
  ],
